# autobots

./: .gitignore  CLAUDE.md  COST_VERIFICATION.md  CROSS_PLATFORM.md  E2E_JOURNEYS.md  KNOWN_ISSUES.md  LICENSE  MARK_II_PLAN.md  NVIDIA_MODELS.md  PARITY_ROADMAP.md  PHASE4_IMPLEMENTATION.md  PROJECTS.md  PROJECT_STATUS.md  PUBLISHING.md  README.md  REFACTORING-PHASE-6.md  RELEASE_README.md  STATUS.md  TRUST_TESTING.md  USER_GUIDE.md  adr-001-autonomy-boundaries.md  autobot-swarm-changes.md  autobots-model-registry.example.json  autobots-test-suite.md  autobots.toml.example  autobots_final_polish.md  cli-contract.md  completion-roadmap.md  config-model.md  find_endpoints.py  guide-to-a+++.md  main.py  model-validation-report.json  nvidia-skills-for-autobots.md  nvidia_models.json  package-description.md  product-definition.md  project-compatibility.md  pyproject.toml  router.py  (+2 more)
.claude/: settings.local.json
.github/workflows/: publish.yml  update-models.yml
.tmp_cli_check/: .autobots-checkpoint.json  pyproject.toml
.tmp_cli_check/.autobots-state/: audit.jsonl  session.json  session.json.tmp
.tmp_cli_check/.autobots-state/phases/: P0.json
.tmp_cli_check/context/: architecture.md  progress-tracker.md  project-briefing.md  ui-components.md
.tmp_cli_check/src/: app.py
autobots/: __init__.py  bootstrap.py  catalog.py  cli.py  completions.py  config.py  context_budget.py  context_gen.py  costs.py  dashboard.py  diff.py  errors.py  executor.py  find_endpoints.py  git_utils.py  logging.py  marketplace.py  onboarding.py  orchestrator.py  planning.py  plugins.py  preflight.py  router.py  selectors.py  ui.py  workspace.py
autobots/context/: __init__.py  claude_md.py  manager.py  tokenizer.py
autobots/executor/: __init__.py  autonomy.py  commands.py  core.py  gate.py  models.py  modes.py  operations.py  plan_runner.py  queue_writer.py  state.py  task_registry.py  todo_tracker.py  validation.py
autobots/hooks/: __init__.py  manager.py
autobots/mcp/: __init__.py  client.py
autobots/permissions/: __init__.py  interactive.py  logging.py  settings.py
autobots/planning/: __init__.py  core.py  models.py  scanner.py  synthesis.py  utils.py
autobots/repl/: __init__.py  commands.py  runner.py  session.py
autobots/review/: __init__.py  diagnostics.py  git_review.py
autobots/router/: __init__.py  core.py  decomposer.py  design.py  models.py  phases.py  planning.py  sequencer.py  stages.py  utils.py
autobots/skills/: __init__.py  algorithmic-art.md  backend-engineer.md  brand-guidelines.md  canvas-design.md  claude-api.md  cluster_prompts.py  doc-coauthoring.md  docx.md  file-reading.md  financial-calculator.md  frontend-design.md  frontend-developer.md  internal-comms.md  learn.md  loader.py  mcp-builder.md  pdf-reading.md  pdf.md  pptx.md  product-self-knowledge.md  setup-writing-style.md  skill-creator.md  slack-gif-creator.md  theme-factory.md  web-artifacts-builder.md  webapp-testing.md  xlsx.md
autobots/skills/nvidia/: agent-skills.md  autonomous-agent-research.md  cudaq.md  cudf.md  cuopt-optimization.md  cuopt-routing.md  dynamo-deployment.md  dynamo-router.md  holoscan.md  kubernetes-infra.md  neautomodel-recipe.md  nemotron-customize.md  rag-blueprint.md  rag-eval.md  retrieval.md  safety-policy.md  session-memory.md  skill-evolution.md
autobots/skills/templates/: architecture.md  conventions.md  security-auth.md  testing-strategy.md
autobots/tools/: __init__.py  base.py  edit.py  formatting.py  glob.py  grep.py  permissions.py  read.py  registry.py  write.py
autobots/utils/: __init__.py  retry.py
context/: architecture.md  progress-tracker.md  project-briefing.md  roadmap.md  security-auth.md
publish_artifacts/: autobot_swarm-0.1.1-py3-none-any.whl
scripts/: update_models.py
skills/: code-reviewer.md  devops-engineer.md  fullstack-engineer.md
tests/: build_project.py  gen_to_disk.py  phase1_single_model.py  phase2_generate_review.py  phase3_project_awareness.py  phase4_validation.py  phase5_error_recovery.py  phase6_incremental.py  review_to_disk.py  test_bootstrap.py  test_catalog.py  test_catalog_changes.py  test_cli_plan_args.py  test_cli_runtime.py  test_completions.py  test_config_validation.py  test_context.py  test_context_budget.py  test_context_gen.py  test_cost_verification.py  test_costs.py  test_cross_platform.py  test_dashboard.py  test_diff_logs.py  test_e2e_journeys.py  test_errors.py  test_final_decision.py  test_gate.py  test_git_utils.py  test_hooks_mcp.py  test_interrupt_handler.py  test_known_issues.py  test_marketplace.py  test_onboarding.py  test_permissions.py  test_phase_10_failure_modes.py  test_phase_4_execution.py  test_phase_7_state.py  test_phase_8_orchestration.py  test_phase_9_config.py  (+23 more)
tests/integration/: README.md  __init__.py  conftest.py  test_api_connectivity.py  test_full_pipeline.py
