[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobot-swarm"
version = "0.1.0"
description = "Hierarchical multi-cluster coding swarm CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Daniel Deshmukh", email = "deshmukhdaniel2005@gmail.com" }
]
keywords = [
  "cli",
  "automation",
  "ai",
  "nvidia nim",
  "coding agent",
  "swarm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/DanielDeshmukh"
Repository = "https://github.com/DanielDeshmukh/autobots"
Issues = "https://github.com/DanielDeshmukh/autobots/issues"

[project.scripts]
autobots = "autobots.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["autobots*"]
