[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobot-swarm"
version = "0.1.13"
description = "Hierarchical multi-cluster coding swarm CLI"
readme = "package-description.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Daniel Deshmukh", email = "deshmukhdaniel2005@gmail.com"}
]
keywords = ["cli", "automation", "ai", "nvidia-nim", "coding-agent", "swarm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.scripts]
autobots = "autobots.cli:main"

[project.urls]
Repository = "https://github.com/DanielDeshmukh/autobots"
Issues = "https://github.com/DanielDeshmukh/autobots/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autobots*"]

[tool.setuptools.package-data]
autobots = ["skills/nvidia/*.md"]
"*" = ["LICENSE"]
