[metadata]
name = autobot-swarm
version = 0.1.1
description = Hierarchical multi-cluster coding swarm CLI
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Deshmukh
author_email = deshmukhdaniel2005@gmail.com
url = https://github.com/DanielDeshmukh
project_urls =
    Repository = https://github.com/DanielDeshmukh/autobots
    Issues = https://github.com/DanielDeshmukh/autobots/issues
keywords =
    cli
    automation
    ai
    nvidia nim
    coding agent
    swarm
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    openai>=1.0.0
    python-dotenv>=1.0.0
    rich>=13.0.0

[options.packages.find]
include =
    autobots*

[options.entry_points]
console_scripts =
    autobots = autobots.cli:main
